Fix edit field button in control panel sizing being too small

--- a/src/web/assets/forms/src/scss/_form-field.scss
+++ b/src/web/assets/forms/src/scss/_form-field.scss
@@ -182,11 +182,12 @@
     cursor: pointer;
     transition: all 0.2s ease;
     width: 30px;
-    height: 28px;
+    height: 28px !important;
     background-color: transparent;
     border-radius: 4px;
     border: none;
     outline: none;
+    display: block !important;
 
     svg {
         pointer-events: none;
